# Fastapi-Delivery-API

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 31bb9bbd4f1c_make_expires_at_timezone_aware.py  38affc639e83_make_expires_at_timezone_aware.py  d2b5cb1db548_initial.py
backend/app/: celery_app.py  main.py
backend/app/api/v1/: __init__.py  auth.py  cart.py  category.py  dish.py  order.py
backend/app/api/v1/admin/: __init__.py  category.py  dish.py  orders.py  users.py
backend/app/api/v1/user/: __init__.py  address.py  auth.py  cart.py  category.py  dish.py  orders.py
backend/app/cli/: create_admin.py
backend/app/core/: config.py  database.py  db_start.py  dependencies.py  exceptions.py  security.py
backend/app/core/dependencies/: auth.py  main.py
backend/app/dependencies/: auth.py  main.py
backend/app/models/: __init__.py  address.py  auth.py  cart.py  category.py  dish.py  enums.py  menu.py  order.py  user.py
backend/app/repositories/: address.py  auth.py  cart.py  category.py  dish.py  main_repos.py  menu.py  order.py  user.py
backend/app/schemas/: address.py  auth.py  cart.py  category.py  dish.py  order.py  user.py
backend/app/services/: address.py  auth.py  cart.py  category.py  dish.py  main_service.py  menu.py  order.py  storage.py
backend/app/tasks/: auth.py  order.py
backend/tests/: conftest.py
backend/tests/integration/: test_address_api.py  test_admin_api.py  test_auth_api.py  test_cart_api.py  test_menu_api.py  test_order_api.py
backend/tests/unit/: test_address_service.py  test_auth_service.py  test_cart_service.py  test_category_service.py  test_dish_service.py  test_order_service.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  styles.css
frontend/src/api/: addresses.ts  admin.ts  auth.ts  cart.ts  client.ts  menu.ts  orders.ts  queryKeys.ts
frontend/src/hooks/: useAddresses.ts  (+5 more)
(+53 files in other folders)
